# counting_pairs_of_repeated_chars_python-

./: Readme.md  bench.py  main.py
pyext-myrustlib/: Cargo.toml
pyext-myrustlib/src/: lib.rs
